[project]
name = "dphi-space-vl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
# Orin r36.4.0 builds (for JetPack 6.2.1)
build-orin-r36-4-0-1p6b = "dphi_build.cli:build_orin_r36_4_0_1p6b"
build-orin-r36-4-0-3b = "dphi_build.cli:build_orin_r36_4_0_3b"

# Orin dusty-nv llama_cpp builds
build-orin-dustynv-1p6b = "dphi_build.cli:build_orin_dustynv_1p6b"
build-orin-dustynv-3b = "dphi_build.cli:build_orin_dustynv_3b"

# GH200 builds
build-gh200-1p6b = "dphi_build.cli:build_gh200_1p6b"
build-gh200-3b = "dphi_build.cli:build_gh200_3b"

[tool.setuptools]
packages = ["dphi_build"]

[tool.uv]
package = true
