[project]
name = "dphi-space-vl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
# Orin l4t pytorch builds (for JetPack 6.2.1)
build-orin-l4t-pytorch-1p6b = "dphi_build.cli:build_orin_l4t_pytorch_r36_4_0_1p6b"
build-orin-l4t-pytorch-3b = "dphi_build.cli:build_orin_l4t_pytorch_r36_4_0_3b"

# Orin llama_cpp builds
build-orin-llama-cpp-1p6b = "dphi_build.cli:build_orin_llama_cpp_r36_4_0_1p6b"
build-orin-llama-cpp-3b = "dphi_build.cli:build_orin_llama_cpp_r36_4_0_3b"

# GH200 builds
build-gh200-l4t-pytorch-1p6b = "dphi_build.cli:build_gh200_l4t_pytorch_1p6b"
build-gh200-l4t-pytorch-3b = "dphi_build.cli:build_gh200_l4t_pytorch_3b"

[tool.setuptools]
packages = ["dphi_build"]

[tool.uv]
package = true
